--- a/Assignment3.tex
+++ b/Assignment3.tex
@@ -190,7 +190,7 @@ Using equation \eqref{eq:eq3} and \eqref{eq:eq5},the area of the sector is obtai
 \label{fig:1}
 \end{figure}
 Ref:Tangents & Normals \\
-The points of intersection of the line 
+If a line 
 \begin{align}
     L:  \vec{x} = \vec{a} + \lambda \vec{m} 
 \end{align}
@@ -198,7 +198,7 @@ touches a conic section at one point $\vec{q}$ then
 \begin{align}
 \vec{m}^T(\vec{V} \vec{q}+\vec{u}) = 0  \label{eq:EqP}
 \end{align}
-From equation \eqref{eq:A} $\Vec{V}$ is \myvec{1&0 \\ 0&1} \\
+From equation \eqref{eq:A} $\Vec{V}$ is \myvec{1&0 \\ 0&1}  and $\vec{u}$=\myvec{0 \\ 0}\\
 from eq \eqref{eq:A} and \eqref{eq:EqP} point of intersection is $\Vec{A}$ is given by
 \begin{align}
     \myvec{0 & 2} (\myvec{1&0\\0&1}\vec{A}+\vec{u})&=0 \\
@@ -234,6 +234,5 @@ from eq \eqref{eq:eqA} and \eqref{eq:EqP} point of intersection is \Vec{B} is gi
 %     \vec{x}=\myvec{0 \\ 0}+ 1 \myvec{\sqrt{3} \\ 1} \\
 %     \vec{x}= \myvec{\sqrt{3} \\ 1}
 % \end{align}
-so, B =\myvec{\sqrt{3} \\ 1}
 
 \end{document}
