--- a/Assignment3.tex
+++ b/Assignment3.tex
@@ -199,14 +199,14 @@ touches a conic section at one point $\vec{q}$ then
 \vec{m}^T(\vec{V} \vec{q}+\vec{u}) = 0  \label{eq:EqP}
 \end{align}
 From equation \eqref{eq:A} $\Vec{V}$ is \myvec{1&0 \\ 0&1}  and $\vec{u}$=\myvec{0 \\ 0}\\
-from eq \eqref{eq:A} and \eqref{eq:EqP} point of intersection is $\Vec{A}$ is given by
+From equation of x-axis, \eqref{eq:A} and \eqref{eq:EqP} point of intersection is $\Vec{A}$ is given by
 \begin{align}
     \myvec{0 & 2} (\myvec{1&0\\0&1}\vec{A}+\vec{u})&=0 \\
     \myvec{0&2}\vec{A}&=0 \\
     \implies \vec{A}&=\myvec{2\\ 0} 
 \end{align}
 similarly \\
-from eq \eqref{eq:eqA} and \eqref{eq:EqP} point of intersection is \Vec{B} is given by
+from eq \eqref{eq:eqA},\eqref{eq:A} and \eqref{eq:EqP} point of intersection is \Vec{B} is given by
 \begin{align}
     \myvec{1 & -\sqrt{3}} (\myvec{1&0\\0&1}\vec{B}+\vec{u})&=0 \\
     \myvec{1 & -\sqrt{3}}\vec{B}&=0 \\
